[package]
name = "include_folder_macros"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "proc macro for include_folder"
repository = "https://github.com/Joshua861/include_folder"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
anyhow = "1.0.96"
heck = "0.5.0"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = "2.0.98"
